--- a/configure.in
+++ b/configure.in
@@ -549,10 +549,18 @@ AC_DEFINE(GNOME)
 G_WRAP_COMPILE_ARGS=""
 G_WRAP_LINK_ARGS=""
 
-AM_PATH_GWRAP(1.1.5, , [AC_MSG_ERROR([
+AM_GUILE_VERSION_CHECK(1.3.4, 1.5.0, , [AC_MSG_ERROR([
 
-  g-wrap does not appear to be installed correctly, or is not new
-  enough.  Right now gnucash requires at least version 1.1.5 to build.
+  guile does not appear to be installed correctly, or is not in the
+  correct version range.  Right now gnucash requires at least version
+  1.3.4 to build, but does not work with 1.5 or greater.
+])])
+
+AM_PATH_GWRAP(1.1.11, 1.3.0, , [AC_MSG_ERROR([
+
+  g-wrap does not appear to be installed correctly, or is not in the
+  correct version range.  Right now gnucash requires at least version
+  1.1.11 to build, but does not work with 1.3 or greater.
   If you need to install g-wrap, you can find it at
   ftp://ftp.gnucash.org/pub/g-wrap.
 ])])
