--- a/rpm/gnucash-sql.spec.in
+++ b/rpm/gnucash-sql.spec.in
@@ -10,8 +10,9 @@ Requires:  	gnome-libs >= 1.2.0, gdk-pixbuf >= 0.2.5, gnome-print >= 0.21
 Requires:	guile >= 1.3.4, gtkhtml >= 0.8, Guppi >= 0.35.3
 Requires:	g-wrap >= 1.1.11, umb-scheme >= 3.2, gal >= 0.8
 BuildPrereq: 	g-wrap-devel >= 1.1.11, gtkhtml-devel >= 0.8,
-BuildPrereq: 	Guppi-devel, gal-devel, libxml-devel, readline-devel,
+BuildPrereq: 	Guppi-devel, postgresql-devel, gal-devel, libxml-devel
 BuildPrereq: 	libglade-devel, libghttp-devel, python-devel, libtermcap-devel
+BuildPrereq: 	readline-devel
 Prereq: 	/sbin/ldconfig /sbin/install-info
 
 %description
@@ -28,7 +29,7 @@ double-entry accounting principles to ensure balanced books.
 
 %build
 autoconf
-./configure --prefix=%{_prefix} --sysconfdir=%{_sysconfdir} \
+./configure --enable-sql --prefix=%{_prefix} --sysconfdir=%{_sysconfdir} \
 --infodir=%{_infodir} --mandir=%{_mandir}
 make || :
 cd src/engine
