* rpm/*: revert Chris Lyttle's patches.  Make gnucash.spec depend 	on Postgres however it will build two RPMS: gnucash and 	gnucash-postgres.  The former does NOT depend on postgres and 	should be installable on systems without it
	* src/optional/Makefile.am: backport a change to allow 'make dist" to work
	* src/optional/swig/makefile.am: don't require swig for "make dist"


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7190 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/rpm/Makefile.am
+++ b/rpm/Makefile.am
@@ -1,10 +1,9 @@
 
 EXTRA_DIST = \
   .cvsignore \
-  gnucash.spec.in \
-  gnucash-sql.spec.in
+  gnucash.spec.in
 
-all-local: gnucash.spec gnucash-sql.spec
+all-local: gnucash.spec
 
 ## We borrow guile's convention and use @-...-@ as the substitution
 ## brackets here, instead of the usual @...@.  This prevents autoconf
@@ -16,10 +15,4 @@ gnucash.spec: gnucash.spec.in Makefile
             -e 's:@-VERSION-@:${VERSION}:'
 	mv $@.tmp $@
 
-gnucash-sql.spec: gnucash-sql.spec.in Makefile
-	rm -f $@.tmp
-	sed < $@.in > $@.tmp \
-            -e 's:@-VERSION-@:${VERSION}:'
-	mv $@.tmp $@
-
-CLEANFILES = gnucash.spec gnucash-sql.spec
+CLEANFILES = gnucash.spec
