--- a/src/optional/Makefile.am
+++ b/src/optional/Makefile.am
@@ -4,6 +4,10 @@ EXTRA_DIST = \
 
 # N.B. Do *not* specify subdirs, since we do *not* want the swig subdirs
 # built by default, since many folks may not have swig installed, and this
-# is, after all, optional. But do put them in the dist.
+# is, after all, optional.  We need SUBDIRS in order for make dist to work.
+
+SUBDIRS = .
+
+# But do put them in the dist.
 
 DIST_SUBDIRS = swig
