--- a/rpm/gnucash.spec.in
+++ b/rpm/gnucash.spec.in
@@ -10,8 +10,9 @@ Requires:  	gnome-libs >= 1.2.0, gdk-pixbuf >= 0.2.5, gnome-print >= 0.21
 Requires:	guile >= 1.3.4, gtkhtml >= 0.8, Guppi >= 0.35.3
 Requires:	g-wrap >= 1.1.11, umb-scheme >= 3.2, gal >= 0.8
 BuildPrereq: 	g-wrap-devel >= 1.1.11, gtkhtml-devel >= 0.8,
-BuildPrereq: 	Guppi-devel, gal-devel, libxml-devel, readline-devel,
+BuildPrereq: 	Guppi-devel, postgresql-devel, gal-devel, libxml-devel
 BuildPrereq: 	libglade-devel, libghttp-devel, python-devel, libtermcap-devel
+BuildPrereq: 	readline-devel
 Prereq: 	/sbin/ldconfig /sbin/install-info
 
 %description
@@ -22,18 +23,25 @@ designed to be simple and easy to use, but is backed with
 double-entry accounting principles to ensure balanced books.
 
 
+%package postgres
+Requires:	gnucash = %{PACKAGE_VERSION}
+Summary:	SQL (PostgreSQL) backend package for GnuCash
+
+%description postgres
+GnuCash is a personal finance manager. A check-book like
+register GUI allows you to enter and track bank accounts,
+stocks, income and even currency trades. The interface is
+designed to be simple and easy to use, but is backed with
+double-entry accounting principles to ensure balanced books.
+
+This package contains the SQL Backend for PostgreSQL databases.
+
 %prep
 %setup -q
 
-
 %build
-autoconf
-./configure --prefix=%{_prefix} --sysconfdir=%{_sysconfdir} \
+./configure --enable-sql --prefix=%{_prefix} --sysconfdir=%{_sysconfdir} \
 --infodir=%{_infodir} --mandir=%{_mandir}
-make || :
-cd src/engine
-make libgncengine.la
-cd ../..
 make
 
 %install
@@ -42,8 +50,12 @@ make prefix=$RPM_BUILD_ROOT/%{_prefix} sysconfdir=$RPM_BUILD_ROOT/%{_sysconfdir}
 infodir=$RPM_BUILD_ROOT/%{_infodir} mandir=$RPM_BUILD_ROOT/%{_mandir} install
 %find_lang %name
 
+# Create the list of libdir files to include (which is everything but postgres
+(cd $RPM_BUILD_ROOT && find %{_libdir} \! -name libgnc_postgres\* -print`) > gc-libdir-file-list
+
 %clean
 rm -rf $RPM_BUILD_ROOT
+rm -f gc-libdir-file-list
 
 %post
 /sbin/ldconfig
@@ -56,13 +68,12 @@ if [ $1 = 0 ]; then
    %{_infodir}/dir
 fi
 
-%files -f %{name}.lang
+%files -f %{name}.lang -f gc-libdir-file-list
 %defattr(444,root,root,755)
 %attr(555,root,root) %{_bindir}/*
 %attr(555,root,root) %{_datadir}/gnucash/finance-quote-helper
 %{_mandir}/man*/*
 %{_infodir}/*.gz
-%{_libdir}/*
 %dir %{_datadir}/gnucash
 %{_datadir}/gnucash/accounts
 %{_datadir}/gnucash/doc
@@ -76,3 +87,7 @@ fi
 %config %{_sysconfdir}/gnucash
 %doc AUTHORS COPYING ChangeLog ChangeLog.1 HACKING NEWS README README.patches
 %doc doc/README.german doc/README.francais doc/guile-hackers.txt
+
+%files postgres
+%defattr(444,root,root,755)
+%{_libdir}/libgnc_postgres*
