Fix 'make check' srfi problems when using guile 1.6.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8007 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -255,10 +255,13 @@ AC_SUBST(GNC_ADD_ON_SRFIS)
 if test "x${GNC_ADD_ON_SRFIS}" != "x"
 then
  GNC_SRFI_LOAD_PATH="\${top_srcdir}/lib/"
+ GNC_TEST_SRFI_LOAD_CMD="--guile-load-dir \${top_srcdir}/lib/"
 else
  GNC_SRFI_LOAD_PATH=""
+ GNC_TEST_SRFI_LOAD_CMD=""
 fi
 AC_SUBST(GNC_SRFI_LOAD_PATH)
+AC_SUBST(GNC_TEST_SRFI_LOAD_CMD)
 
 ### --------------------------------------------------------------------------
 ### See if we need guile-www
