--- a/configure.in
+++ b/configure.in
@@ -385,6 +385,8 @@ AC_ARG_ENABLE( sql,
 	PGSQL_CFLAGS="-I${PGSQL_CFLAGS}"
       fi
 
+      AS_SCRUB_INCLUDE(PGSQL_CFLAGS)
+
       saved_CPPFLAGS="${CPPFLAGS}"
       CPPFLAGS="${CPPFLAGS} ${PGSQL_CFLAGS}"
       AC_CHECK_HEADERS(pgsql/libpq-fe.h postgresql/libpq-fe.h libpq-fe.h)
@@ -407,9 +409,9 @@ AC_ARG_ENABLE( sql,
               fi
           done
 	fi
-        
-	AS_SCRUB_INCLUDE(PGSQL_CFLAGS)
 
+	AS_SCRUB_INCLUDE(CFLAGS)
+        
         PGSQL_LIBS=`${PG_CONFIG} --libdir`
         if test "x$PGSQL_LIBS" != x; then
 	  PGSQL_LIBS="-L${PGSQL_LIBS}"
@@ -479,6 +481,7 @@ then
     fi
 
     AC_MSG_CHECKING(for libofx/libofx.h)
+    AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
     save_CPPFLAGS="${CPPFLAGS}"
     CPPFLAGS="${CPPFLAGS} ${LIBOFX_CFLAGS}"
     AC_TRY_CPP( [#include <libofx/libofx.h>], AC_MSG_RESULT(yes), OFXfound=no )
@@ -486,6 +489,7 @@ then
     if test x${OFXPREFIX} = x -a x${OFXfound} = no ; then
     	LIBOFX_LIBS="-L$/usr/local/lib"
 	LIBOFX_CFLAGS="-I$/usr/local/include"
+        AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
         CPPFLAGS="${CPPFLAGS} ${LIBOFX_CFLAGS}"
 
         AC_TRY_CPP( [#include <libofx/libofx.h>], AC_MSG_RESULT([yes (in /usr/local)]),
@@ -510,7 +514,6 @@ int ofx_proc_statement_cb(const struct OfxStatementData data) { return 0; }
 
     LIBS="${save_LIBS}"
     CPPFLAGS="${save_CPPFLAGS}"
-    AS_SCRUB_INCLUDE(LIBOFX_CFLAGS)
     AC_SUBST(LIBOFX_CFLAGS)
     AC_SUBST(LIBOFX_LIBS)
 fi
@@ -741,7 +744,7 @@ AC_CHECK_LIB(popt, poptStrippedArgv,, [AC_MSG_ERROR([
 ### --------------------------------------------------------------------------
 
 AC_ARG_ENABLE(gui, 
-  [  --enable-gui                  build the GNOME GUI components of Gnucash],
+  [  --diable-gui                  build without the GNOME GUI components of Gnucash],
   [case "${enableval}" in
      yes) gnc_build_gui=true ;;
      no)  gnc_build_gui=false ;;
@@ -783,6 +786,7 @@ then
     AC_MSG_CHECKING([for gtkhtml < 1.1])
     GTKHTML_LIBS=`$GNOME_CONFIG --libs gtkhtml`
     GTKHTML_CFLAGS=`$GNOME_CONFIG --cflags gtkhtml`
+    AS_SCRUB_INCLUDE(GTKHTML_CFLAGS)
     if test "x$GTKHTML_LIBS" != x; then
 	# check for gtkhtml and enable it via HAVE_LIBGTKHTML
 	# if found
@@ -802,6 +806,7 @@ then
 	fi
 	GTKHTML_LIBS=`$PKG_CONFIG --libs gtkhtml-1.1`
 	GTKHTML_CFLAGS=`$PKG_CONFIG --cflags gtkhtml-1.1`
+        AS_SCRUB_INCLUDE(GTKHTML_CFLAGS)
 	# check for gtkhtml and enable it via HAVE_LIBGTKHTML
 	# if found
 	AC_MSG_CHECKING([for gtkhtml >= 1.1])
@@ -811,7 +816,6 @@ then
 		     AC_MSG_ERROR([Cannot find gtkhtml-1.1. See the README and config.log for more info.]),
 		     $GTKHTML_LIBS)
     fi
-    AS_SCRUB_INCLUDE(GTKHTML_CFLAGS)
     
     GHTTP_LIBS=`$GNOME_CONFIG --libs ghttp`
     GHTTP_CFLAGS=`$GNOME_CONFIG --cflags ghttp`
@@ -1036,7 +1040,7 @@ then
   # Enable error-on-warning by default -- I'm tired of fixing other
   # people's missing #includes, etc.
   AC_ARG_ENABLE(error-on-warning,
-    [  --enable-error-on-warning    treat compile warnings as errors],
+    [  --disable-error-on-warning    disable treating compile warnings as errors],
     [case "${enableval}" in
        yes) warnFLAGS="${warnFLAGS} -Werror" ;;
        no)  ;;
