* re-add macros/gnome.m4 for GNOME_INIT 	* configure.in: re-add call to GNOME_INIT
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8025 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -771,7 +771,7 @@ AM_CONDITIONAL(GNUCASH_ENABLE_GUI, test x${gnc_build_gui} = xtrue)
 
 if test x${gnc_build_gui} = xtrue ;
 then
-#    GNOME_INIT			2/18/03 remove
+    GNOME_INIT
     GNOME_COMPILE_WARNINGS
 #    GNOME_CHECK_GDK_PIXBUF
 #    GNOME_PRINT_CHECK
