2003-03-02 TomF changes for Gnome-2 branch
	* configure.in: Change GNOME_XML_CHECK call to GNOME_XML2_CHECK
	  to fix wrong libxml library in gcc calls.
          Move AS_SCRUB_INCLUDE call to macros/gnome-xml-check.m4
	  Commented out the po/Makefile lines in AC_OUTPUT calls to bypass
	  "not found" errors
	* macros/autogen.sh: Commented out gettextize lines to bypass
	  "not found" errors
	  might want to change the gettextize to glib-gettextize
	* macros/gnome-xml-check.m4: changed macro name to GNOME_XML2_CHECK
	  Changed xml to xml2; changed GNOME-CONFIG to PKG-CONFIG
	  Moved AS_SCRUB_INCLUDE call from configure.in
	  This .m4 file was not in the Gnome-2 branch, so it has to be
	  added in cvs.  It don't know how it got dropped.
	* src/engine/gnc-associate-account.c: Fixed gcc warning messages.
	* Currently, make fails at gnc-gpg.c, and there is an unknown text
	  file: src/network-utils/gnc-gpg.loT


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8032 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -300,17 +300,16 @@ AM_CONDITIONAL(GNC_HAVE_GUILE_WWW, test "${gnc_have_guile_www}" = yes)
 ### --------------------------------------------------------------------------
 ### Gnome XML -- GNOME_XML_LIB is defined by GNOME_XML_CHECK
 
-# GNOME_XML_CHECK 2/18/03 remove to bypass autogen.sh message
-GNOME_XML_CFLAGS=`$PKG_CONFIG --cflags xml`
-AS_SCRUB_INCLUDE(GNOME_XML_CFLAGS)
+GNOME_XML2_CHECK 
+# GNOME_XML_CFLAGS=`$PKG_CONFIG --cflags xml2` Done in GNOME_XML2_CHECK
 
-AC_SUBST(GNOME_XML_CFLAGS)
 
 oLIBS="$LIBS"
 LIBS="$LIBS $GNOME_XML_LIB"
 
-AC_CHECK_LIB(xml, xmlElemDump, [:], [
-  AC_MSG_ERROR([libxml 1.8.3 or newer required for GnuCash])
+# Compile a test program to verify that the xml2 library works.
+AC_CHECK_LIB(xml2, xmlElemDump, [:], [
+  AC_MSG_ERROR([libxml2 is required for GnuCash])
   ])
 LIBS="$oLIBS"
 
@@ -1015,7 +1014,8 @@ chmod u+x ${srcdir}/src/bin/overrides/gnucash-make-guids
 LIBOBJS_SEDSCRIPT="s,\.[[^.]]* ,$U&,g;s,\.[[^.]]*\$\$,$U&,"
 AC_SUBST(LIBOBJS_SEDSCRIPT)
 
-AC_OUTPUT( m4/Makefile  po/Makefile.in intl/Makefile 
+#AC_OUTPUT( m4/Makefile  po/Makefile.in intl/Makefile
+AC_OUTPUT( m4/Makefile 
           dnl # Makefiles
           Makefile
           accounts/Makefile
