update to release 1.8.1.5
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8040 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/quotes/Makefile.am
+++ b/src/quotes/Makefile.am
@@ -10,6 +10,7 @@ EXTRA_DIST = \
   finance-quote-check.in \
   finance-quote-helper.in \
   gnc-prices \
+  dump-finance-quote \
   update-finance-quote.in \
   value_portfolio 
 
