This commit was manufactured by cvs2svn to create tag '1.8.2-rc'.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/tags/1.8.2-rc@8041 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/quotes/Makefile.am
+++ b/src/quotes/Makefile.am
@@ -10,9 +10,9 @@ EXTRA_DIST = \
   finance-quote-check.in \
   finance-quote-helper.in \
   gnc-prices \
+  dump-finance-quote \
   update-finance-quote.in \
-  value_portfolio \
-  dump-finance-quote
+  value_portfolio 
 
 ## We borrow guile's convention and use @-...-@ as the substitution
 ## brackets here, instead of the usual @...@.  This prevents autoconf
