--- a/src/bin/overrides/gnucash-build-env.in
+++ b/src/bin/overrides/gnucash-build-env.in
@@ -21,7 +21,7 @@ fi
 
 if test "${GNC_SHARE_PATH}"x = x
 then
-  GNC_SHARE_PATH="(\"${top_srcdir}/src/scm\")"
+  GNC_SHARE_PATH="(\"${top_srcdir}/src/scm\" \"${top_srcdir}/src/quotes\")"
   export GNC_SHARE_PATH
 fi
 
@@ -31,13 +31,12 @@ then
   export GNC_DOC_PATH
 fi
 
-eval `@-GNC_SRCDIR-@/src/gnc-test-env \
+eval `@-GNC_SRCDIR-@/src/gnc-test-env @-GNC_TEST_SRFI_LOAD_CMD-@ \
   --library-dir ${top_builddir}/src/core-utils \
   --library-dir ${top_builddir}/src/gnome \
   --library-dir ${G_WRAP_LIB_DIR} \
   --guile-load-dir ${G_WRAP_MODULE_DIR} \
   --guile-load-dir ${top_builddir}/src/scm \
-  --guile-load-dir ${top_builddir}/lib \
   --guile-load-dir ${top_builddir}/lib/guile-www \
   --guile-load-dir ${top_builddir}/src/gnome \
   --gnc-module-dir ${top_builddir}/src/gnc-module \
@@ -61,6 +60,7 @@ eval `@-GNC_SRCDIR-@/src/gnc-test-env \
   --gnc-module-dir ${top_builddir}/src/business/business-core \
   --gnc-module-dir ${top_builddir}/src/business/business-core/file \
   --gnc-module-dir ${top_builddir}/src/business/dialog-tax-table \
+  --gnc-module-dir ${top_builddir}/src/business/business-utils \
   --gnc-module-dir ${top_builddir}/src/business/business-ledger \
   --gnc-module-dir ${top_builddir}/src/business/business-gnome \
   --guile-load-dir ${top_builddir}/src/business/business-reports \
