--- a/src/network-utils/Makefile.am
+++ b/src/network-utils/Makefile.am
@@ -1,11 +1,14 @@
+# 2003-03-11 TomF changes for Gnome-2 branch, 5th batch
+# Add src/engine to allow including gnc-engine-util.h
+
 SUBDIRS = . test
 
 pkglib_LTLIBRARIES = libgncmod-network-utils.la
 
 AM_CFLAGS = \
   -I${top_srcdir}/src/gnc-module \
+  -I${top_srcdir}/src/engine \
   ${GLIB_CFLAGS} \
-  ${GHTTP_CFLAGS} \
   ${GNOME_INCLUDEDIR} \
   ${GUILE_INCS}
 
@@ -23,7 +26,6 @@ libgncmod_network_utils_la_LDFLAGS = -module
 
 libgncmod_network_utils_la_LIBADD = \
   ${top_builddir}/src/gnc-module/libgncmodule.la \
-  ${GHTTP_LIBS} \
   ${GNOME_LIBDIR} \
   ${GNOME_LIBS} \
   ${GNOMEUI_LIBS}
