* src/calculation/Makefile.am: fix to build on systems that don't 	  have GUILE installed in the system path or in the same place 	  as GLIB.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8075 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/calculation/Makefile.am
+++ b/src/calculation/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = . test
 pkglib_LTLIBRARIES = libgncmod-calculation.la
 
 libgncmod_calculation_la_LDFLAGS = -module
-libgncmod_calculation_la_LIBADD = ${GLIB_LIBS} 
+libgncmod_calculation_la_LIBADD = ${GLIB_LIBS} ${GUILE_LIBS}
 
 libgncmod_calculation_la_SOURCES = \
   expression_parser.c \
@@ -26,4 +26,4 @@ EXTRA_DIST = \
   numeric_ops.c \
   numeric_ops.h
 
-AM_CFLAGS = -I${top_srcdir}/src/gnc-module ${GLIB_CFLAGS}
+AM_CFLAGS = -I${top_srcdir}/src/gnc-module ${GLIB_CFLAGS} ${GUILE_INCS}
