--- a/src/report/standard-reports/Makefile.am
+++ b/src/report/standard-reports/Makefile.am
@@ -26,6 +26,7 @@ gncscmmod_DATA = \
    balance-sheet.scm \
    cash-flow.scm \
    category-barchart.scm \
+   daily-reports.scm \
    net-barchart.scm \
    pnl.scm \
    portfolio.scm \
