Adapt configure.in to openhbci.m4 changes -- use OPENHBCI_CFLAGS instead of CXXFLAGS.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8287 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -532,7 +532,7 @@ if test x${HBCI_DIR} = xhbci ;
 then
     AM_PATH_OPENHBCI(0.9.6)
     HBCI_LIBS="${OPENHBCI_LIBS}"
-    HBCI_CFLAGS="${OPENHBCI_CXXFLAGS}"
+    HBCI_CFLAGS="${OPENHBCI_CFLAGS}"
 
     AS_SCRUB_INCLUDE(HBCI_CFLAGS)
     AC_SUBST(HBCI_LIBS)
