--- a/src/quotes/update-finance-quote.in
+++ b/src/quotes/update-finance-quote.in
@@ -38,7 +38,9 @@ if ($( != 0) {
   exit 0 if ($input ne "y");
 }
 
+CPAN::Shell->install('LWP');
 CPAN::Shell->install('Date::Manip');
+CPAN::Shell->install('HTML::Parser');
 CPAN::Shell->install('Finance::Quote');
 
 ## Local Variables:
