--- a/src/gnome-search/Makefile.am
+++ b/src/gnome-search/Makefile.am
@@ -14,7 +14,8 @@ AM_CFLAGS = \
   ${GDK_PIXBUF_CFLAGS} \
   ${GLADE_CFLAGS} \
   ${GNOME_INCLUDEDIR} \
-  ${GLIB_CFLAGS} 
+  ${GLIB_CFLAGS} \
+  ${GNOME_PRINT_CFLAGS}
 
 libgncmod_gnome_search_la_SOURCES = \
   gncmod-gnome-search.c \
@@ -56,7 +57,8 @@ libgncmod_gnome_search_la_LIBADD = \
   ${GNOMEUI_LIBS} \
   ${GTKHTML_LIBS} \
   ${GLADE_LIBS} \
-  ${GLIB_LIBS}
+  ${GLIB_LIBS} \
+  ${GNOME_PRINT_LIBS}
 
 libgw_gnome_search_la_SOURCES = gw-gnome-search.c
 libgw_gnome_search_la_LDFLAGS = -module ${G_WRAP_LINK_ARGS}
