Jan Arne Petersen's second batch of patches.  Gnome2 gnucash will now put up a splash screen.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8319 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -1179,6 +1179,10 @@ AC_OUTPUT( m4/Makefile
           dnl # we configure gnucash-config here because we *don't*
           dnl # want variables to be fully expanded
           gnucash-config
+
+          dnl # GNOME 2 Port (should be moved to Makefile.am)
+	  src/gnome/gnucash.desktop
+          src/gnome/gnucash.keys
           ,
           dnl # commands go here, but we don't have any right now
           )
