Jan Petersen's po/Makefile patch
	* configure.in: Add Makefile.in to AC_OUTPUT targets.
	* macros/autogen.sh: Add a AM_GLIB_GNU_GETTEXT section to generate a po/Makefile.in.in file.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8331 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -1070,6 +1070,7 @@ AC_OUTPUT( m4/Makefile
           lib/srfi/Makefile
 	  lib/libc/Makefile
           macros/Makefile
+          po/Makefile.in
           rpm/Makefile
           src/Makefile
           src/app-file/Makefile
