Jan Arne Petersen's gnome2 patch #7.  See the ChangeLog for more info.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8341 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome-utils/Makefile.am
+++ b/src/gnome-utils/Makefile.am
@@ -45,6 +45,8 @@ libgncmod_gnome_utils_la_SOURCES = \
   gnc-html.c \
   gnc-mdi-utils.c \
   gnc-menu-extensions.c \
+  gnc-tree-model-account.c \
+  gnc-tree-model-example-account.c \
   gncmod-gnome-utils.c \
   gtkselect.c \
   print-session.c \
@@ -78,6 +80,8 @@ gncinclude_HEADERS = \
   gnc-html.h \
   gnc-mdi-utils.h \
   gnc-menu-extensions.h \
+  gnc-tree-model-account.h \
+  gnc-tree-model-example-account.h \
   gtkselect.h \
   print-session.h \
   window-help.h
