Another patch by Jan Petersen (see ChangeLog for full details)
here is another patch which:
- Makefile: add src/file/backend to the INCLUDE dirs.
- Replace a GncAccountTree by GtkTreeView and GNCTreeModelAccount.
- Replace some gtk_signal_connect by g_signal_connect.
- Replace a GncDateEdit by GnomeDateEdit (probably a temporary fix).
- Replace some GnomeDialog by GtkDialog
- Add support for a virtual toplevel account into the account tree model.
- Update account.glade


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8349 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome-utils/Makefile.am
+++ b/src/gnome-utils/Makefile.am
@@ -5,6 +5,7 @@ pkglib_LTLIBRARIES = libgncmod-gnome-utils.la libgw-gnome-utils.la
 AM_CFLAGS = \
   -I${top_srcdir}/src/gnc-module \
   -I${top_srcdir}/src/engine \
+  -I${top_srcdir}/src/backend/file \
   -I${top_srcdir}/src/network-utils \
   -I${top_srcdir}/src/app-utils \
   -I${top_srcdir}/src \
