* configure.in: remove duplicate intl/Makefile po/Makefile.in
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8353 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -1078,7 +1078,7 @@ chmod u+x ${srcdir}/src/bin/overrides/gnucash-make-guids
 LIBOBJS_SEDSCRIPT="s,\.[[^.]]* ,$U&,g;s,\.[[^.]]*\$\$,$U&,"
 AC_SUBST(LIBOBJS_SEDSCRIPT)
 
-AC_OUTPUT( m4/Makefile  intl/Makefile po/Makefile.in intl/Makefile po/Makefile.in 
+AC_OUTPUT( m4/Makefile  intl/Makefile po/Makefile.in
           dnl # Makefiles
           Makefile
           accounts/Makefile
