Another big gnome2 patch from Jan Petersen:
here is a really big patch:

* Add some libegg files.
* Start to create a replacement for gnome-mdi.
* Start to convert the acct-tree into a new gnucash module.
* Add a GtkTreeModel for TreeModelAccountTypes.
* Some small account dialog fixes.
* Fix the commodity dialog. (Replace GnomeDialog by GtkDialog, GtkSignal
  by GSignal, etc).
* Fix the transfer dialog. (Replace GnomeDialog by GtkDialog, GtkSignal
  by GSignal, GncAccountTree by GtkTreeModel etc).
* Fix GncDateEdit. (Replace GtkSignal by GSignal and backport some
  GnomeDateEdit fixes)


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8400 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome-utils/Makefile.am
+++ b/src/gnome-utils/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = . test
+SUBDIRS = egg . test
 
 pkglib_LTLIBRARIES = libgncmod-gnome-utils.la libgw-gnome-utils.la
 
@@ -8,6 +8,7 @@ AM_CFLAGS = \
   -I${top_srcdir}/src/backend/file \
   -I${top_srcdir}/src/network-utils \
   -I${top_srcdir}/src/app-utils \
+  -I${top_srcdir}/src/gnome-utils/egg \
   -I${top_srcdir}/src \
   ${GUILE_INCS} \
   ${LIBGUPPI_CFLAGS} \
@@ -47,6 +48,7 @@ libgncmod_gnome_utils_la_SOURCES = \
   gnc-mdi-utils.c \
   gnc-menu-extensions.c \
   gnc-tree-model-account.c \
+  gnc-tree-model-account-types.c \
   gnc-tree-model-example-account.c \
   gncmod-gnome-utils.c \
   gtkselect.c \
@@ -82,6 +84,7 @@ gncinclude_HEADERS = \
   gnc-mdi-utils.h \
   gnc-menu-extensions.h \
   gnc-tree-model-account.h \
+  gnc-tree-model-account-types.h \
   gnc-tree-model-example-account.h \
   gtkselect.h \
   print-session.h \
@@ -101,6 +104,7 @@ libgncmod_gnome_utils_la_LIBADD = \
   ${top_builddir}/src/calculation/libgncmod-calculation.la \
   ${top_builddir}/src/network-utils/libgncmod-network-utils.la \
   ${top_builddir}/src/app-utils/libgncmod-app-utils.la \
+  ${top_builddir}/src/gnome-utils/egg/libegg.la \
   ${GUILE_LIBS} \
   ${LIBGUPPI_LIBS} \
   ${GNOMEUI_LIBS} \
