--- a/configure.in
+++ b/configure.in
@@ -350,6 +350,7 @@ fi
 
 GNC_ACCOUNTS_DIR='${GNC_SHAREDIR}/accounts'
 GNC_GLADE_DIR='${GNC_SHAREDIR}/glade'
+GNC_UI_DIR='${GNC_SHAREDIR}/ui'
 GNC_GWRAP_LIBDIR='${GNC_SHAREDIR}/guile-modules/g-wrapped'
 GNC_MODULE_DIR='${pkglibdir}'
 GNC_PIXMAP_DIR='${datadir}/pixmaps/gnucash'
@@ -358,6 +359,7 @@ AC_SUBST(GNC_ACCOUNTS_DIR)
 AC_SUBST(GNC_CONFIGDIR)
 AC_SUBST(GNC_DOC_INSTALL_DIR)
 AC_SUBST(GNC_GLADE_DIR)
+AC_SUBST(GNC_UI_DIR)
 AC_SUBST(GNC_GWRAP_LIBDIR)
 AC_SUBST(GNC_INCLUDE_DIR)
 AC_SUBST(GNC_LIBDIR)
@@ -1111,9 +1113,11 @@ AC_OUTPUT( m4/Makefile
           src/gnc-module/test/mod-baz/Makefile
           src/gnc-module/test/misc-mods/Makefile
           src/gnome/Makefile
-          src/gnome/glade/Makefile
+	  src/gnome/glade/Makefile
+	  src/gnome/ui/Makefile
           src/gnome-utils/Makefile
-          src/gnome-utils/test/Makefile
+          src/gnome-utils/egg/Makefile
+	  src/gnome-utils/test/Makefile
           src/gnome-search/Makefile
           src/import-export/Makefile
           src/import-export/test/Makefile
