Another GNOME 2 port patch from Jan Petersen.
Changes:
 * Move the plugin handling from the main window into the new plugin
   manager.
 * Add scrub commands to the account tree page and implement most of the
   commands.
 * Use the new ui plugin system for the QIF import druid.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8405 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome/Makefile.am
+++ b/src/gnome/Makefile.am
@@ -44,6 +44,7 @@ libgncgnome_la_SOURCES = \
   gnc-main-window.c \
   gnc-plugin.c \
   gnc-plugin-account-tree.c \
+  gnc-plugin-manager.c \
   gnc-plugin-page-account-tree.c \
   gnc-plugin-page.c \
   gnc-splash.c \
@@ -84,6 +85,7 @@ noinst_HEADERS = \
   gnc-main-window.h \
   gnc-plugin.h \
   gnc-plugin-account-tree.h \
+  gnc-plugin-manager.h \
   gnc-plugin-page.h \
   gnc-plugin-page-account-tree.h \
   gnc-network.h \
