Yet another Jan Petersen patch:
Changes:
 * Requires gtk+-2.0 >= 2.2 and libgnomeui-2.0 >= 2.2
 * Fix dialog-price-editor.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8410 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/configure.in
+++ b/configure.in
@@ -780,7 +780,8 @@ then
     GNOME_COMPILE_WARNINGS
 
     # Look for libgnomeui by pkg-config
-    PKG_CHECK_MODULES(GNOMEUI, libgnomeui-2.0)
+    PKG_CHECK_MODULES(GNOMEUI, libgnomeui-2.0 >= 2.2
+			       gtk+-2.0 >= 2.2)
     AS_SCRUB_INCLUDE(GNOMEUI_CFLAGS)
     AC_SUBST(GNOMEUI_CFLAGS)
     AC_SUBST(GNOMEUI_LIBS)
